<?xml version="1.0"?>
<package format="1">
  <name>rviz_camera_ray_tool</name>
  <version>0.0.1</version>
  <description>The rviz_camera_ray_tool package</description>

  <maintainer email="jmeyer@swri.org">Jon Meyer</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>qtbase5-dev</build_depend>
  <build_depend>rviz</build_depend>

  <run_depend>libqt5-core</run_depend>
  <run_depend>libqt5-gui</run_depend>
  <run_depend>libqt5-widgets</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>rviz</run_depend>

  <export>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
