<?xml version="1.0"?>
<package format="3">
  <name>rviz2_camera_ray_tool</name>
  <version>0.0.1</version>
  <description>A ROS2 Rviz2 plugin that allows publishing a ray from the camera to a clicked point.</description>

  <maintainer email="joseph.schornak@swri.org">Joseph Schornak</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>

  <depend>rviz_common</depend>
  <depend>rviz_default_plugins</depend>
  <depend>rviz_ogre_vendor</depend>
  <depend>rviz_rendering</depend>
  <depend>rviz2_camera_ray_tool_msgs</depend>

  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-gui</exec_depend>
  <exec_depend>libqt5-opengl</exec_depend>
  <exec_depend>libqt5-widgets</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
