<?xml version="1.0"?>
<package format="3">
  <name>rviz2_camera_ray_tool_msgs</name>
  <version>0.1.0</version>
  <description>The rviz2_camera_ray_tool_msgs package</description>
  <maintainer email="joseph.schornak@swri.org">Joseph Schornak</maintainer>
  <license>Apache 2.0</license>
  <author >Joseph Schornak</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
